<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home1"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/Account"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/account_settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_reply_24"
            android:title="@string/logout" />

    </group>
</menu>